[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Front.png" type="Texture" id=1]
[ext_resource path="res://Assets/explosion.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Front.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9, 8 )

[sub_resource type="CircleShape2D" id=2]
radius = 202.237

[sub_resource type="Animation" id=4]
resource_name = "MuzzleFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 9, 9.5 )

[node name="Front" type="KinematicBody2D" groups=["enemy"]]
show_behind_parent = true
collision_layer = 4
collision_mask = 18
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
modulate = Color( 0.52549, 0.0941176, 1, 1 )
shape = SubResource( 2 )

[node name="PositionBF" type="Position2D" parent="."]
position = Vector2( 0, 8 )

[node name="Spawnspeed" type="Timer" parent="."]
wait_time = 0.6

[node name="Explosion" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 9 )
texture = ExtResource( 2 )

[node name="Muzle" type="AnimationPlayer" parent="."]
anims/MuzzleFlash = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0, 1, 0.298039, 1 )
position = Vector2( 0, 2.5 )
shape = SubResource( 7 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="timeout" from="Spawnspeed" to="." method="_on_Spawnspeed_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
